--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,13 +64,64 @@ nav a:hover{
 .column{
     background-color: #fff;
     padding: 10px;
-    border: 1 px solid #D3D3d3;
+    border: 1px solid #D3D3d3;
     border-radius: 5px;
     box-shadow: 2px 2px 1px #D3D3d3;
     z-index: -1;
 }
-.user_deatils{
-    width: 250px;
+.user_details{
+    width: 260px;
     float: left;
-    margin-bottom: 20PX;
+    margin-bottom: 20px;
+}
+
+.user_details_left_right{
+    width: 125px;
+    display: inline-block;
+    position: absolute;
+}
+.user_details img{
+    height: 125px;
+    border-radius: 5px;
+    margin-right: 6px; 
+}
+
+.main_column{
+    float: right;
+    width: 70%;
+    z-index: -1;
+    min-height: 160px;
+}
+.post_form{
+    width: 100%;
+}
+.post_form textarea{
+    width: 83%;
+    height: 60px;
+    border-radius: 6px;
+    margin-right: 5px;
+    border: 1px solide #D3D3d3;
+    font-size: 12px;
+    padding: 5px;
+}
+textarea:focus{
+    outline: none;
+}
+.post_form input[type='submit']{
+    width:10%;
+    height:60px;
+    border: none;
+    border-radius: 6px;
+    background-color: #3498db;
+    font-family: 'Bellota-BoldItalic',sans-serif;
+    color: #fff;
+    text-shadow: #73B6E2 0.5px 0.5px 0px;
+    position: absolute;
+    font-size: 90%;
+    outline: 0;
+    margin: 0;
+}
+.post_form input[type='submit']:active{
+    padding: 5px 4px 4px 5px;
+    
 }
