--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,21 +107,38 @@ nav a:hover{
 textarea:focus{
     outline: none;
 }
-.post_form input[type='submit']{
-    width:10%;
-    height:60px;
-    border: none;
-    border-radius: 6px;
-    background-color: #3498db;
-    font-family: 'Bellota-BoldItalic',sans-serif;
-    color: #fff;
-    text-shadow: #73B6E2 0.5px 0.5px 0px;
-    position: absolute;
-    font-size: 90%;
-    outline: 0;
-    margin: 0;
+.post_form input[type="submit"] {
+	width: 11%;
+	height: 60px;
+	border: none;
+	border-radius: 3px;
+	background-color: #3498db;
+	font-family: 'Bellota-BoldItalic', sans-serif;
+	color: #1E75CA;
+	text-shadow: #73B6E2 0.5px 0.5px 0px;
+	font-size: 90%;
+	position: absolute;
+	outline: 0;
+	margin: 0;
 }
-.post_form input[type='submit']:active{
-    padding: 5px 4px 4px 5px;
-    
+
+.post_form input[type="submit"]:active {
+	padding: 5px 4px 4px 5px;
 }
+
+.status_post {
+	width: 96%;
+	font-size: 15px;
+	padding: 0px 5px;
+	min-height: 75px;
+}
+
+.post_profile_pic {
+	float: left;
+	margin-right: 7px;
+}
+
+.post_profile_pic img {
+	border-radius: 5px;
+}
+
